[package]
name = "descript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = {git = "https://github.com/zesterer/chumsky", rev = "e9962b2"}

[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell"
features = ["llvm14-0"]

[[bin]]
path = "./src/main.rs"
name = "descript_harness"

[lib]
path = "./src/lib.rs"
name = "descript"
